--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ import streamlit as st
 import pandas as pd
 import pydeck as pdk
 import re 
+import streamlit_folium
 from streamlit_folium import st_folium
 import folium
 import plotly.express as px
